--- a/hugo.toml
+++ b/hugo.toml
@@ -12,7 +12,7 @@ title = "Aman Rathore"
 weight = 1
 
 [languages.en.params.sidebar]
-subtitle = "The biggest enemy of talent is applause"
+subtitle = "this is a newwww thought"
 
 [services.googleAnalytics]
 
